--- a/index.html
+++ b/index.html
@@ -5,57 +5,74 @@
     <title>Car Price Predictor</title>
     <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
 </head>
-<body class="bg-teal-100">
+<body onload="lul()" class="bg-teal-100">
     <div class="container mx-auto">
-        <h1 class="mt-20 text-center text-gray-800 text-3xl font-bold">Car Price Predictor</h1>
-        <div class="mx-auto mt-10 max-w-2xl w-full">
-            <form class="bg-white shadow-md rounded px-6 py-6">
-                <div class="flex flex-wrap -mx-3 mb-12">
-                    <div class="w-full md:w-1/2 px-3 mb-6 md:mb-0">
-                        <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="brand">Brand</label>
-                        <select onchange="getModel()" class="block w-full bg-gray-200 border border-gray-200 text-gray-700 py-3 px-4 pr-8 rounded leading-tight focus:outline-none focus:bg-white focus:border-gray-500" name="car_brand" id="brand" required>
-                            <option selected>--</option>
-                            <option value="bmw">BMW</option>
-                            <option value="honda">Honda</option>
-                            <option value="mercedes benz">Mercedes Benz</option>
-                            <option value="perodua">Perodua</option>
-                            <option value="proton">Proton</option>
-                            <option value="toyota">Toyota</option>
-                        </select>
+        <h1 class="mt-20 text-center text-gray-800 text-4xl font-bold">Car Price Predictor <span class="text-5xl ml-2">🚗</span></h1>
+        <div class="flex flex-wrap mt-12 mb-8">
+            <div class="ml-auto mr-5 max-w-2xl w-full md:w-1/2">
+                <form class="bg-white shadow-md rounded px-6 py-6" name="car_prediction" method="POST">
+                    <div class="flex flex-wrap -mx-3 mb-12">
+                        <div class="w-full md:w-1/2 px-3 mb-6 md:mb-0">
+                            <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="brand">Brand</label>
+                            <select onchange="getModel()" class="block w-full bg-gray-200 border border-gray-200 text-gray-700 py-3 px-4 pr-8 rounded leading-tight focus:outline-none focus:bg-white focus:border-gray-500" name="car_brand" id="brand" required>
+                                <option value="" selected>Select the brand</option>
+                                <option value="bmw">BMW</option>
+                                <option value="honda">Honda</option>
+                                <option value="mercedes benz">Mercedes Benz</option>
+                                <option value="perodua">Perodua</option>
+                                <option value="proton">Proton</option>
+                                <option value="toyota">Toyota</option>
+                            </select>
+                        </div>
+                        <div class="w-full md:w-1/2 px-3 mb-6 md:mb-0">
+                            <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="model">Model</label>
+                            <select class="block w-full bg-gray-200 border border-gray-200 text-gray-700 py-3 px-4 pr-8 rounded leading-tight focus:outline-none focus:bg-white focus:border-gray-500" name="car_model" id="model" required>
+                                <option value="">--</option>
+                            </select>
+                        </div>
                     </div>
-                    <div class="w-full md:w-1/2 px-3 mb-6 md:mb-0">
-                        <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="model">Model</label>
-                        <select class="block w-full bg-gray-200 border border-gray-200 text-gray-700 py-3 px-4 pr-8 rounded leading-tight focus:outline-none focus:bg-white focus:border-gray-500" name="car_model" id="model" required>
-                            <option name="" value="" selected>--</option>
-                        </select>
+                    <div class="flex flex-wrap -mx-3 mb-10">
+                        <div class="w-full md:w-1/3 px-3 mb-6 md:mb-0">
+                            <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="transmission">Transmission</label>
+                            <select onchange="getEngineCapacity()" class="block w-full bg-gray-200 border border-gray-200 text-gray-700 py-3 px-4 pr-8 rounded leading-tight focus:outline-none focus:bg-white focus:border-gray-500" name="transmission" id="transmission" required>
+                                <option value="" selected>Select the transmission</option>
+                                <option value="auto">Auto</option>
+                                <option value="manual">Manual</option>
+                            </select>
+                        </div>
+                        <div class="w-full md:w-1/3 px-3 mb-6 md:mb-0">
+                            <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="engine_capacity">Engine Capacity</label>
+                            <select onchange="getManufacturedYear()" class="block w-full bg-gray-200 border border-gray-200 text-gray-700 py-3 px-4 pr-8 rounded leading-tight focus:outline-none focus:bg-white focus:border-gray-500" name="car_model" id="engine" required>
+                                <option value="">--</option>
+                            </select>
+                        </div>
+                        <div class="w-full md:w-1/3 px-3 mb-6 md:mb-0">
+                            <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="manufactured_year">Manufactured Year</label>
+                            <select class="block w-full bg-gray-200 border border-gray-200 text-gray-700 py-3 px-4 pr-8 rounded leading-tight focus:outline-none focus:bg-white focus:border-gray-500" name="car_model" id="manufactured" required>
+                                <option value="">--</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="flex flex-row-reverse">
+                        <button onclick="getPrediction()" type="button" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Predict</button>
+                    </div>
+                </form>
+            </div>
+            <div class="mr-auto w-full max-w-xs md:w-1/2">
+                <div class="bg-white shadow-md rounded p-6">
+                    <div class="ml-4 mb-8">
+                        <p class="text-gray-700 text-sm font-bold uppercase mb-2">Actual price</p>
+                        <p id="actual_price" class="text-green-600 text-lg font-bold">RM 0</p>
+                    </div>
+                    <div class="ml-4">
+                        <p class="text-gray-700 text-sm font-bold uppercase mb-2">Predicted price</p>
+                        <p id="predicted_price" class="text-gray-600 text-lg font-bold">RM 0</p>
                     </div>
                 </div>
-                <div class="flex flex-wrap -mx-3 mb-10">
-                    <div class="w-full md:w-1/3 px-3 mb-6 md:mb-0">
-                        <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="transmission">Transmission</label>
-                        <select onchange="getEngineCapacity()" class="block w-full bg-gray-200 border border-gray-200 text-gray-700 py-3 px-4 pr-8 rounded leading-tight focus:outline-none focus:bg-white focus:border-gray-500" name="transmission" id="transmission" required>
-                            <option name="" value="" selected>--</option>
-                            <option value="auto">Auto</option>
-                            <option value="manual">Manual</option>
-                        </select>
-                    </div>
-                    <div class="w-full md:w-1/3 px-3 mb-6 md:mb-0">
-                        <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="engine_capacity">Engine Capacity</label>
-                        <select onchange="getManufacturedYear()" class="block w-full bg-gray-200 border border-gray-200 text-gray-700 py-3 px-4 pr-8 rounded leading-tight focus:outline-none focus:bg-white focus:border-gray-500" name="car_model" id="engine" required>
-                            <option name="" value="" selected>--</option>
-                        </select>
-                    </div>
-                    <div class="w-full md:w-1/3 px-3 mb-6 md:mb-0">
-                        <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="manufactured_year">Manufactured Year</label>
-                        <select class="block w-full bg-gray-200 border border-gray-200 text-gray-700 py-3 px-4 pr-8 rounded leading-tight focus:outline-none focus:bg-white focus:border-gray-500" name="car_model" id="manufactured" required>
-                            <option name="" value="" selected>--</option>
-                        </select>
-                    </div>
-                </div>
-            </form>
+            </div>
         </div>
-    </div>
-    
+        </div>
+
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="script.js"></script>
 </body>
