--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Car Price Predictor</title>
+    <title>Used Car Price Predictor</title>
     <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
 </head>
 <body onload="lul()" class="bg-teal-100">
     <div class="container mx-auto">
-        <h1 class="mt-20 text-center text-gray-800 text-4xl font-bold">Car Price Predictor <span class="text-5xl ml-2">🚗</span></h1>
+        <h1 class="mt-20 text-center text-gray-800 text-4xl font-bold">Used Car Price Predictor <span class="text-5xl ml-2">🚗</span></h1>
         <div class="flex flex-wrap mt-12 mb-8">
             <div class="ml-auto mr-5 max-w-2xl w-full md:w-1/2">
                 <form class="bg-white shadow-md rounded px-6 py-6" name="car_prediction" method="POST">
