--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Used Car Price Predictor</title>
     <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
 </head>
-<body onload="lul()" class="bg-teal-100">
+<body onload="lul()" class="bg-white">
     <div class="container mx-auto">
         <h1 class="mt-20 text-center text-gray-800 text-4xl font-bold">Used Car Price Predictor <span class="text-5xl ml-2">🚗</span></h1>
         <div class="flex flex-wrap mt-12 mb-8">
